# DocuHelp

./: .env.example  .gitignore  .gitmodules  API_INTEGRATION_SUMMARY.md  FRAME_SEPARATION_UPDATE.md  IMPLEMENTATION_COMPLETE.md  LOCAL_SETUP.md  LOCAL_SETUP_GUIDE.md  QUICK_START.md  README.md  README_LOCAL_SETUP.md  START_HERE.md  UI_FEEDBACK_FIXES.md  VLM_IMPLEMENTATION_COMPLETE.md  VLM_PIPELINE_GUIDE.md  VLM_QUICK_START.md  YOUTUBE_DOWNLOADER_GUIDE.md  YOUTUBE_PARSER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  styles.css
frontend/src/components/: AnnotationCard.js  Feedback.css  Feedback.js  FileUpload.css  FileUpload.js  KeyframeSwiper.css  KeyframeSwiper.js  Logo.css  Logo.js  ProcedureSelection.css  ProcedureSelection.js  ProgressTracker.css  ProgressTracker.js  Report.css  Report.js  VideoAnalysis.css  VideoAnalysis.js
scripts/: setup_env.sh
src/dataset/: loader.py  preprocessor.py
src/docuhelp/dataset/: loader.py  video_input_parser.py  youtube_downloader.py  youtube_parser.py
src/docuhelp/processing/: annotation.py
src/docuhelp/ui/: __init__.py  firebase_config.py  local_storage.py
src/docuhelp/ui/api/: main.py
src/docuhelp/ui/api/routes/: feedback.py  report.py  video.py
src/docuhelp/utils/: __init__.py
src/docuhelp/vlm/: inference.py  openrouter_client.py  video_processor.py
src/processing/: __init__.py
src/report/: __init__.py
src/ui/api/: main.py
src/utils/: config.py
src/vlm/: model.py
surgical-report-generator/: .env.example  README.md
surgical-report-generator/frontend/: package.json
surgical-report-generator/frontend/src/: firebase.js
surgical-report-generator/notebooks/: exploration.ipynb
surgical-report-generator/src/dataset/: __init__.py  sop_parser.py
surgical-report-generator/src/processing/: frame_extractor.py  segmentation.py
surgical-report-generator/src/report/: generator.py  refiner.py
surgical-report-generator/src/testing/: __init__.py
surgical-report-generator/src/ui/api/routes/: video.py
surgical-report-generator/src/vlm/: __init__.py  inference.py  timestamp_extractor.py
tests/: check_video_file.py  demo_download.py  download_age_restricted.py  download_with_compatibility.py  test_age_restricted.py  test_age_restricted_fixed.py  test_api_connection.py  test_cookies_download.py  test_dataset.py  test_frame_separation.py  test_user_url.py  test_youtube_downloader.py  test_youtube_parser.py
